Remove blank entry for script editor script list. Also add xTile libraries.

--- a/Ceriyo/Ceriyo/Ceriyo.csproj
+++ b/Ceriyo/Ceriyo/Ceriyo.csproj
@@ -131,6 +131,10 @@
       <Private>False</Private>
     </Reference>
     <Reference Include="WindowsBase" />
+    <Reference Include="xTile, Version=2.0.7.0, Culture=neutral, processorArchitecture=x86">
+      <SpecificVersion>False</SpecificVersion>
+      <HintPath>Libraries\xTile\xTile.dll</HintPath>
+    </Reference>
   </ItemGroup>
   <ItemGroup>
     <Compile Include="GlobalContent.Generated.cs" />
@@ -155,6 +159,9 @@
     <Content Include="Libraries\Squid\Squid.dll" />
     <Content Include="Libraries\Squid\Squid.xml" />
     <Content Include="Libraries\Xna4Pc\FlatRedBall.Content.dll" />
+    <Content Include="Libraries\xTile\xTile.dll" />
+    <Content Include="Libraries\xTile\xTile.Pipeline.dll" />
+    <Content Include="Libraries\xTile\xTile.xml" />
     <None Include="app.config" />
     <None Include="packages.config" />
     <None Include="redball.BMP">
