--- a/Ceriyo.Toolset/Ceriyo.Toolset.csproj
+++ b/Ceriyo.Toolset/Ceriyo.Toolset.csproj
@@ -415,6 +415,10 @@
       <Project>{f9ab9dd8-a342-4d58-bbb9-e15184e7f522}</Project>
       <Name>Ceriyo.Library</Name>
     </ProjectReference>
+    <ProjectReference Include="..\xTile\xTilePC.csproj">
+      <Project>{bf19f9e2-fd54-4b63-af67-da49b5ea11d9}</Project>
+      <Name>xTilePC</Name>
+    </ProjectReference>
   </ItemGroup>
   <ItemGroup>
     <Resource Include="Images\script-add.png" />
