--- a/Ceriyo.Data/Ceriyo.Data.csproj
+++ b/Ceriyo.Data/Ceriyo.Data.csproj
@@ -193,6 +193,7 @@
     <Compile Include="Settings\GameSettings.cs" />
     <Compile Include="Settings\ServerSettings.cs" />
     <Compile Include="Settings\ToolsetSettings.cs" />
+    <Compile Include="DataObjects\Vector3Int.cs" />
     <Compile Include="ViewModels\AbilityEditorVM.cs" />
     <Compile Include="ViewModels\AnimationEditorVM.cs" />
     <Compile Include="ViewModels\AreaSelectionVM.cs" />
