--- a/Ceriyo.Server/Ceriyo.Server.csproj
+++ b/Ceriyo.Server/Ceriyo.Server.csproj
@@ -184,6 +184,10 @@
       <Project>{f9ab9dd8-a342-4d58-bbb9-e15184e7f522}</Project>
       <Name>Ceriyo.Library</Name>
     </ProjectReference>
+    <ProjectReference Include="..\Ceriyo.Network\Ceriyo.Network.csproj">
+      <Project>{d012eb04-9037-4dc2-9290-c39eff9df5ea}</Project>
+      <Name>Ceriyo.Network</Name>
+    </ProjectReference>
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <PropertyGroup>
