--- a/Ceriyo.Library/Ceriyo.Library.csproj
+++ b/Ceriyo.Library/Ceriyo.Library.csproj
@@ -131,7 +131,7 @@
     <Compile Include="Network\Packets\CharacterSelectionScreenPacket.cs" />
     <Compile Include="Network\Packets\CreateCharacterPacket.cs" />
     <Compile Include="Network\Packets\DeleteCharacterPacket.cs" />
-    <Compile Include="Network\Packets\GameScreenPacket.cs" />
+    <Compile Include="Network\Packets\GameScreenInitPacket.cs" />
     <Compile Include="Network\Packets\PacketBase.cs" />
     <Compile Include="Network\Packets\PlayerInputPacket.cs" />
     <Compile Include="Network\Packets\SelectCharacterPacket.cs" />
