--- a/Ceriyo.Toolset/packages.config
+++ b/Ceriyo.Toolset/packages.config
@@ -2,6 +2,7 @@
 <packages>
   <package id="AvalonEdit" version="5.0.2" targetFramework="net40" />
   <package id="Extended.Wpf.Toolkit" version="2.3" targetFramework="net40" />
+  <package id="FluentValidation" version="5.6.0.0" targetFramework="net40" />
   <package id="log4net" version="2.0.3" targetFramework="net40" />
   <package id="MUF" version="1.2.1" targetFramework="net40" />
 </packages>
