--- a/Ceriyo.Library.Tests/Ceriyo.Library.Tests.csproj
+++ b/Ceriyo.Library.Tests/Ceriyo.Library.Tests.csproj
@@ -102,7 +102,8 @@
     <Compile Include="Processing\GameResourceProcessorTests.cs" />
     <Compile Include="Processing\SpriteAnimationProcessorTests.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
-    <Compile Include="ScriptEngine\ScriptMethodTests.cs" />
+    <Compile Include="ScriptEngine\ScriptMethods.Area.Tests.cs" />
+    <Compile Include="ScriptEngine\ScriptMethods.GameObject.Tests.cs" />
   </ItemGroup>
   <ItemGroup>
     <ProjectReference Include="..\Ceriyo.Data\Ceriyo.Data.csproj">
@@ -113,6 +114,9 @@
       <Project>{f9ab9dd8-a342-4d58-bbb9-e15184e7f522}</Project>
       <Name>Ceriyo.Library</Name>
     </ProjectReference>
+  </ItemGroup>
+  <ItemGroup>
+    <Compile Include="ScriptEngine\ScriptMethods.Misc.Tests.cs" />
   </ItemGroup>
   <Choose>
     <When Condition="'$(VisualStudioVersion)' == '10.0' And '$(IsCodedUITest)' == 'True'">
