--- a/Ceriyo.Library.Tests/Ceriyo.Library.Tests.csproj
+++ b/Ceriyo.Library.Tests/Ceriyo.Library.Tests.csproj
@@ -84,6 +84,7 @@
     <Reference Include="System.Core">
       <RequiredTargetFramework>3.5</RequiredTargetFramework>
     </Reference>
+    <Reference Include="System.XML" />
   </ItemGroup>
   <Choose>
     <When Condition="('$(VisualStudioVersion)' == '10.0' or '$(VisualStudioVersion)' == '') and '$(TargetFrameworkVersion)' == 'v3.5'">
@@ -105,6 +106,7 @@
     <Compile Include="ScriptEngine\ScriptMethods.Area.Tests.cs" />
     <Compile Include="ScriptEngine\ScriptMethods.Creature.Tests.cs" />
     <Compile Include="ScriptEngine\ScriptMethods.GameObject.Tests.cs" />
+    <Compile Include="ScriptEngine\ScriptMethods.Tests.cs" />
   </ItemGroup>
   <ItemGroup>
     <ProjectReference Include="..\Ceriyo.Data\Ceriyo.Data.csproj">
