Remove Enum suffix on enumerations

--- a/Ceriyo.Data/Ceriyo.Data.csproj
+++ b/Ceriyo.Data/Ceriyo.Data.csproj
@@ -114,21 +114,21 @@
     <Compile Include="Engine\ResourcePackDataManager.cs" />
     <Compile Include="Engine\WorkingDataManager.cs" />
     <Compile Include="Engine\WorkingPaths.cs" />
-    <Compile Include="Enumerations\AnimationTypeEnum.cs" />
-    <Compile Include="Enumerations\AttributeTypeEnum.cs" />
-    <Compile Include="Enumerations\GameTypeEnum.cs" />
-    <Compile Include="Enumerations\FileOperationResultTypeEnum.cs" />
-    <Compile Include="Enumerations\GenderTypeEnum.cs" />
-    <Compile Include="Enumerations\InventorySlotEnum.cs" />
-    <Compile Include="Enumerations\ItemPropertyTypeEnum.cs" />
-    <Compile Include="Enumerations\MessageBoxButtonTypeEnum.cs" />
-    <Compile Include="Enumerations\NetworkAgentRoleEnum.cs" />
-    <Compile Include="Enumerations\PaintObjectModeTypeEnum.cs" />
-    <Compile Include="Enumerations\PVPTypeEnum.cs" />
-    <Compile Include="Enumerations\ResourceTypeEnum.cs" />
-    <Compile Include="Enumerations\ScriptEventTypeEnum.cs" />
-    <Compile Include="Enumerations\SimpleTypesEventArgs.cs" />
-    <Compile Include="Enumerations\TileEditModeEnum.cs" />
+    <Compile Include="Enumerations\AnimationType.cs" />
+    <Compile Include="Enumerations\AttributeType.cs" />
+    <Compile Include="Enumerations\GameType.cs" />
+    <Compile Include="Enumerations\FileOperationResultType.cs" />
+    <Compile Include="Enumerations\GenderType.cs" />
+    <Compile Include="Enumerations\InventorySlot.cs" />
+    <Compile Include="Enumerations\ItemPropertyType.cs" />
+    <Compile Include="Enumerations\MessageBoxButtonType.cs" />
+    <Compile Include="Enumerations\NetworkAgentRole.cs" />
+    <Compile Include="Enumerations\PaintObjectModeType.cs" />
+    <Compile Include="Enumerations\PVPType.cs" />
+    <Compile Include="Enumerations\ResourceType.cs" />
+    <Compile Include="Enumerations\ScriptEventType.cs" />
+    <Compile Include="EventArguments\SimpleTypesEventArgs.cs" />
+    <Compile Include="Enumerations\TileEditMode.cs" />
     <Compile Include="EventArguments\AreaPropertiesChangedEventArgs.cs" />
     <Compile Include="EventArguments\EditorItemChangedEventArgs.cs" />
     <Compile Include="EventArguments\ResrefEventArgs.cs" />
