--- a/Ceriyo.Data/Ceriyo.Data.csproj
+++ b/Ceriyo.Data/Ceriyo.Data.csproj
@@ -125,6 +125,7 @@
     <Compile Include="Enumerations\NetworkAgentRole.cs" />
     <Compile Include="Enumerations\PaintObjectModeType.cs" />
     <Compile Include="Enumerations\PVPType.cs" />
+    <Compile Include="Enumerations\ResourceSubType.cs" />
     <Compile Include="Enumerations\ResourceType.cs" />
     <Compile Include="Enumerations\ScriptEventType.cs" />
     <Compile Include="EventArguments\SimpleTypesEventArgs.cs" />
@@ -174,6 +175,7 @@
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="ResourceObjects\GameResource.cs" />
     <Compile Include="ResourceObjects\ResourceEditorItem.cs" />
+    <Compile Include="ResourceObjects\ResourceEditorType.cs" />
     <Compile Include="ResourceObjects\UIComponent.cs" />
     <Compile Include="ResourceObjects\UILayout.cs" />
     <Compile Include="Server\ServerGUIStatus.cs" />
