--- a/Ceriyo.Data/Ceriyo.Data.csproj
+++ b/Ceriyo.Data/Ceriyo.Data.csproj
@@ -174,9 +174,9 @@
     <Compile Include="GameObjects\Tileset.cs" />
     <Compile Include="Properties\Annotations.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="ResourceObjects\CPResource.cs" />
+    <Compile Include="ResourceObjects\CPResourceType.cs" />
     <Compile Include="ResourceObjects\GameResource.cs" />
-    <Compile Include="ResourceObjects\ResourceEditorItem.cs" />
-    <Compile Include="ResourceObjects\ResourceEditorType.cs" />
     <Compile Include="ResourceObjects\UIComponent.cs" />
     <Compile Include="ResourceObjects\UILayout.cs" />
     <Compile Include="Server\ServerGUIStatus.cs" />
