--- a/Ceriyo.Server.WPF/Ceriyo.Server.WPF.csproj
+++ b/Ceriyo.Server.WPF/Ceriyo.Server.WPF.csproj
@@ -135,7 +135,7 @@
       <SubType>Designer</SubType>
       <Generator>MSBuild:Compile</Generator>
     </Page>
-    <Page Include="Windows\MainWindow.xaml">
+    <Page Include="Views\ApplicationRootView\ApplicationRoot.xaml">
       <Generator>MSBuild:Compile</Generator>
       <SubType>Designer</SubType>
     </Page>
@@ -144,6 +144,7 @@
       <SubType>Code</SubType>
     </Compile>
     <Compile Include="Bootstrapper.cs" />
+    <Compile Include="Views\ApplicationRootView\ApplicationRootViewModel.cs" />
     <Compile Include="Views\DescriptionView\Description.xaml.cs">
       <DependentUpon>Description.xaml</DependentUpon>
     </Compile>
@@ -160,8 +161,8 @@
       <DependentUpon>PlayerBlacklist.xaml</DependentUpon>
     </Compile>
     <Compile Include="Views\PlayerBlacklistView\PlayerBlacklistViewModel.cs" />
-    <Compile Include="Windows\MainWindow.xaml.cs">
-      <DependentUpon>MainWindow.xaml</DependentUpon>
+    <Compile Include="Views\ApplicationRootView\ApplicationRoot.xaml.cs">
+      <DependentUpon>ApplicationRoot.xaml</DependentUpon>
       <SubType>Code</SubType>
     </Compile>
   </ItemGroup>
@@ -217,6 +218,7 @@
   </ItemGroup>
   <ItemGroup>
     <Folder Include="Events\" />
+    <Folder Include="Windows\" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
