--- a/Ceriyo.Core/Ceriyo.Core.csproj
+++ b/Ceriyo.Core/Ceriyo.Core.csproj
@@ -57,6 +57,7 @@
     <Reference Include="System.Data" />
     <Reference Include="System.Net.Http" />
     <Reference Include="System.Xml" />
+    <Reference Include="WindowsBase" />
   </ItemGroup>
   <ItemGroup>
     <Compile Include="Attributes\ColorTypeAttribute.cs" />
@@ -100,6 +101,7 @@
     <Compile Include="Data\ItemData.cs" />
     <Compile Include="Data\ItemPropertyData.cs" />
     <Compile Include="Data\LocalVariableData.cs" />
+    <Compile Include="Data\ModuleData.cs" />
     <Compile Include="Data\PlaceableData.cs" />
     <Compile Include="Data\ScriptData.cs" />
     <Compile Include="Data\SkillData.cs" />
@@ -114,7 +116,9 @@
     <Compile Include="Entities\Player.cs" />
     <Compile Include="Extensions\EntityWorldExtensions.cs" />
     <Compile Include="Extensions\EnumerationExtensions.cs" />
+    <Compile Include="Extensions\ObservableCollectionEx.cs" />
     <Compile Include="Extensions\SpriteBatchExtensions.cs" />
+    <Compile Include="Properties\Annotations.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Screens\GameScreen.cs" />
     <Compile Include="Contracts\IScreen.cs" />
