--- a/Ceriyo.Toolset.WPF/Ceriyo.Toolset.WPF.csproj
+++ b/Ceriyo.Toolset.WPF/Ceriyo.Toolset.WPF.csproj
@@ -136,6 +136,9 @@
     <Compile Include="Events\ItemDeletedEvent.cs" />
     <Compile Include="Events\ModuleLoadedEvent.cs" />
     <Compile Include="Events\AbilityCreatedEvent.cs" />
+    <Compile Include="Events\PlaceableChangedEvent.cs" />
+    <Compile Include="Events\PlaceableCreatedEvent.cs" />
+    <Compile Include="Events\PlaceableDeletedEvent.cs" />
     <Compile Include="ToolsetGame.cs" />
     <Compile Include="Views\ApplicationRootView\ApplicationRootViewModel.cs" />
     <Page Include="Views\AbilityEditorView\AbilityEditor.xaml">
