--- a/Ceriyo.Game.Windows/Ceriyo.Game.Windows.csproj
+++ b/Ceriyo.Game.Windows/Ceriyo.Game.Windows.csproj
@@ -45,7 +45,7 @@
     <Compile Include="Game1.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
-    <Compile Include="UI\Views\MainMenuView\MainMenu.cs" />
+    <Compile Include="UI\Views\MainMenuView\MainMenuViewModel.cs" />
   </ItemGroup>
   <ItemGroup>
     <Reference Include="artemis">
@@ -73,6 +73,7 @@
     <Reference Include="System" />
     <Reference Include="System.Windows.Forms" />
     <Reference Include="System.Xml" />
+    <Reference Include="WindowsBase" />
   </ItemGroup>
   <ItemGroup>
     <Content Include="Icon.ico" />
@@ -101,7 +102,9 @@
   <ItemGroup>
     <None Include="app.config" />
     <None Include="packages.config" />
+    <None Include="UI\Views\MainMenuView\MainMenu.lua" />
   </ItemGroup>
+  <ItemGroup />
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <Import Project="$(MSBuildExtensionsPath)\MonoGame\v3.0\MonoGame.Content.Builder.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
