--- a/Ceriyo.Core/Ceriyo.Core.csproj
+++ b/Ceriyo.Core/Ceriyo.Core.csproj
@@ -79,6 +79,7 @@
     <Compile Include="Constants\Gender.cs" />
     <Compile Include="Constants\InventorySlot.cs" />
     <Compile Include="Constants\PVPType.cs" />
+    <Compile Include="Constants\ScriptEngine.cs" />
     <Compile Include="Constants\ScriptEvent.cs" />
     <Compile Include="Contracts\ICameraService.cs" />
     <Compile Include="Contracts\IComponentFactory.cs" />
@@ -126,6 +127,7 @@
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Screens\GameScreen.cs" />
     <Compile Include="Contracts\IScreen.cs" />
+    <Compile Include="Scripting\ScriptQueueObject.cs" />
     <Compile Include="Services\ScreenService.cs" />
     <Compile Include="Scripting\EntityMethods.cs" />
     <Compile Include="Scripting\LocalDataMethods.cs" />
