--- a/Ceriyo.Infrastructure/packages.config
+++ b/Ceriyo.Infrastructure/packages.config
@@ -2,6 +2,7 @@
 <packages>
   <package id="Autofac" version="4.1.1" targetFramework="net461" />
   <package id="AutoMapper" version="5.1.1" targetFramework="net461" />
+  <package id="Jint" version="2.9.1" targetFramework="net461" />
   <package id="Lidgren.Network" version="1.0.2" targetFramework="net461" />
   <package id="log4net" version="2.0.5" targetFramework="net461" />
   <package id="MonoGame.Framework.WindowsDX" version="3.5.1.1679" targetFramework="net461" />
