--- a/Ceriyo.Content/Ceriyo.Content.csproj
+++ b/Ceriyo.Content/Ceriyo.Content.csproj
@@ -62,9 +62,9 @@
     <Content Include="Graphics\UI\xna_logo.png" />
     <Content Include="Libraries\artemis.dll" />
     <Content Include="Libraries\Squid.dll" />
-    <Content Include="Scripts\TestJS.js">
+    <None Include="Scripts\TestJS.js">
       <CopyToOutputDirectory>Always</CopyToOutputDirectory>
-    </Content>
+    </None>
   </ItemGroup>
   <ItemGroup>
     <None Include="Compiled\Graphics\Cursors\Arrow.xnb">
